# ops-stack

./: .gitignore  NAMING.md  PIPELINE.md  PROJECT_CONTEXT.md  README.md  load_layout.py  ops-stack.toml
agent-os-runtime/: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
agent-os-runtime/docs/: AGENT_OS_ROADMAP.md  ARCHITECTURE.md  ASSET_STORE.md  CHANGELOG.md  CLAUDE_CODE_REFERENCE_INDEX.md  CLAUDE_CODE_REFERENCE_ROADMAP.md  CONTEXT_MANAGEMENT_V2.md  DATA_BACKUP.md  ENGINEERING.md  GC_SPEC.md  MEMORY_SYSTEM_V2.md  OPEN_DECISIONS.md  OPERATIONS.md  SPRINT_IMPLEMENTATION_ROADMAP.md  STAGE_EXECUTION_PLAN.md
agent-os-runtime/docs/archive/: CLAUDE_CODE_REFERENCE_ROADMAP.md  EFFECT_FIRST_STAGE_PLAN.md  EFFECT_FIRST_STAGE_PLAN_V2.md  SPRINT_IMPLEMENTATION_ROADMAP.md  STAGE_EXECUTION_PLAN.md
agent-os-runtime/docs/examples/: constitutional_test_cases.md  generic_manifest.example.json  graphiti_entitlements.example.json  graphiti_episodes.example.json  ingest_post_samples.md  knowledge_fallback.example.jsonl  short_video_manifest.example.json  skill_compliance.default_agent.example.json
agent-os-runtime/examples/: web_chat_fastapi.py
agent-os-runtime/scripts/: backup_data.py  migrate_compact_v1_to_v2.py  migrate_memory_v2.py
agent-os-runtime/src/agent_os/: __init__.py  __main__.py  backup_data_core.py  cli.py  config.py  context_builder.py  context_diagnostics.py  doctor.py  handoff.py  ingest_gateway.py  manifest_loader.py  manifest_output.py  observability.py  runtime_context.py
agent-os-runtime/tests/core/: test_artifact_store.py  test_asset_ingest.py  test_asset_store_format.py  test_async_review.py  test_backup_data_core.py  test_boundary_safety.py  test_build_memory_tools_exclude.py  test_build_memory_tools_flags.py  test_classify.py  test_cli.py  test_compact_v1_to_v2_migration.py  test_config.py  test_context_builder.py  test_context_diagnostics.py  test_doctor.py  test_e2e_eval.py  test_golden.py  test_handoff.py  test_hindsight_merge.py  test_ingest_gateway.py  test_jsonl_append.py  test_knowledge.py  test_manifest_loader.py  test_mcp_probe.py  test_mem0_backend.py  test_memory_controller.py  test_migration_v2.py  test_observability.py  test_ordered_context.py  test_p1_constitutional_output.py  test_p2_boundary_negative.py  test_phase_c.py  test_retry.py  test_session_persistence.py  test_skill_loader.py  test_source_artifactization.py  test_task_memory.py  test_tool_result_artifactization.py  test_web_admin_api.py
coding-sync/: README.md  (+4 more)
ops-agent/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
ops-agent/.github/workflows/: ci.yml
ops-agent/docs/: AGENT_OS_ROADMAP.md  ARCHITECTURE.md  ASSET_STORE.md  CHANGELOG.md  DATA_BACKUP.md  ENGINEERING.md  OPERATIONS.md
ops-agent/examples/: web_chat_fastapi.py
ops-agent/scripts/: backup_data.py
ops-agent/tests/: test_backup_data_core.py  test_build_memory_tools_exclude.py  test_build_memory_tools_flags.py  test_classify.py  test_doctor.py  test_e2e_eval.py  test_golden.py  test_handoff.py  test_ingest_gateway.py  test_jsonl_append.py  test_knowledge.py  test_manifest_loader.py  test_mcp_probe.py  test_memory_controller.py  test_observability.py  test_p1_constitutional_output.py  test_phase_c.py  test_retry.py  test_session_persistence.py  test_skill_loader.py
ops-distiller-forge/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
ops-distiller-forge/docs/: CHANGELOG.md  CONTRACT.md  ENGINEERING.md
ops-distiller-forge/tests/: conftest.py  test_pipeline.py
ops-knowledge/: LICENSE  README.md  pyproject.toml
ops-knowledge/docs/: CHANGELOG.md  CONTRACT.md
ops-knowledge/tests/: conftest.py  test_distill_stub.py  test_manifest.py  test_validate.py
(+165 files in other folders)
